--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="main">
     <div class="top">
         <div class="hleft">
-            <img src="/assets/logo.png" alt="" height="40px" width="200px" >
+            <a routerLink="/home"><img src="/assets/logo.png" alt="" height="40px" width="200px" ></a>
 
         </div>
         <div>
