--- a/src/app/components/singlecar-details/singlecar-details.component.html
+++ b/src/app/components/singlecar-details/singlecar-details.component.html
@@ -50,9 +50,15 @@
                 <hr>
                 <label for="">owners</label>
                 <span>{{carDetails.owners}}</span>
+                <div class="name">
+                    <button class="btn btn-primary">Add to cart</button>
+                    <button class="btn btn-warning">Buy</button>
+                 </div>
                 </div>
 
             </div>
+         
 
         </div>
+        
     </div>
